--- a/Blog-App/.env
+++ b/Blog-App/.env
@@ -1,4 +1,4 @@
 PORT = 8080
 DEV_MODE = development 
-MONGO_URL = mongodb+srv://krishtidas:krishtiblog1234@cluster0.fd4mb.mongodb.net/blogging-app
+MONGO_URL = mongodb+srv://<username>:<password>@cluster0.fd4mb.mongodb.net/blogging-app
 
